update code for supporting jdk11