@@ -1352,7 +1352,7 @@
         <jdk>11</jdk>
       </activation>
       <properties>
-        <java.version>1.8</java.version>
+        <java.version>1.11</java.version>
       </properties>
       <dependencyManagement>
         <dependencies>
@@ -1377,6 +1377,20 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <source>11</source>
+              <target>11</target>
+              <compilerArgs>
+                <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
+                <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
+                <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
+              </compilerArgs>
             </configuration>
           </plugin>
         </plugins>
